# small-server-project

./: CMakeLists.txt  main  main.cpp  server.cpp
